# agent

./: CHANGELOG.adoc  CHANGELOG.md  Cargo.toml  README.adoc  deny.toml
.cargo/: audit.toml
.circleci/: config.yml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: build_artifacts.yml  daily_security.yml  nightly.yml  publish_dev_artifacts.yml  publish_release_artifacts.yml  rust.yml
.rpm/: stackable-agent.spec
config/: agent_config  commandline_args.adoc
crd/: repository.crd
debian/: postinst
docs/: antora.yml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: commandline_args.adoc  configuration.adoc  index.adoc  jobs.adoc  limitations.adoc  services.adoc
docs/modules/ROOT/pages/installation/: binaries.adoc  building.adoc
docs/modules/ROOT/pages/monitoring/: logs.adoc  restarts.adoc
docs/modules/ROOT/pages/pod_types/: jobs.adoc  services.adoc
docs/modules/ROOT/pages/stages/: cleanup.adoc  overview.adoc
documentation/: commandline_args.adoc
packaging/: buildrpm.sh
packaging/config/: agent.conf
packaging/debian/: postinst  service
packaging/rpm/SOURCES/stackable-agent-VERSION/usr/lib/systemd/system/: stackable-agent.service
packaging/rpm/SPECS/: stackable-agent.spec
rpm/SOURCES/stackable-agent-0.1.0/etc/stackable-agent/: agent.conf
rpm/SOURCES/stackable-agent-0.1.0/etc/systemd/system/: stackable-agent.service
rpm/SPECS/: stackable-agent-0.1.0.spec
src/: agentconfig.rs  fsext.rs  lib.rs  main.rs
src/agentconfig/: mod.rs
src/agentconfig/config_documentation/: tags.adoc
src/config/: mod.rs
src/config/config_documentation/: config_directory.adoc  log_directory.adoc  pod_cidr.adoc  session.adoc
src/config_documentation/: package_directory.adoc
src/provider/: cleanup.rs  error.rs  mod.rs  states.rs
src/provider/kubernetes/: accessor.rs  mod.rs  status.rs
src/provider/repository/: mod.rs  package.rs  repository.rs  repository_spec.rs  stackablerepository.rs
src/provider/states/: create_config.rs  create_service.rs  creating_config.rs  creating_service.rs  download_package.rs  download_package_backoff.rs  downloading.rs  downloading_backoff.rs  failed.rs  install_package.rs  installing.rs  pod.rs  running.rs  setup_failed.rs  starting.rs  stopped.rs  stopping.rs  terminated.rs  waiting_config.rs  waiting_config_map.rs
src/provider/states/pod/: creating_config.rs  creating_service.rs  downloading.rs  downloading_backoff.rs  failed.rs  initializing.rs  installing.rs  running.rs  setup_failed.rs  starting.rs  terminated.rs  waiting_config_map.rs
src/provider/systemdmanager/: journal_reader.rs  manager.rs  mod.rs  service.rs  systemd1_api.rs  systemd_dbus.rs  systemdunit.rs
