[package]
authors = ["Sönke Liebau <soenke.liebau@stackable.de>"]
description = "The component of the Stackable Platform that manages installation of services on the workers"
edition = "2018"
license = "Apache-2.0"
name = "stackable-agent"
version = "0.6.0-nightly"

[dependencies]
# We are currently referencing the Krustlet directly from a Stackable fork of the official repository.
# The fork is needed to remove the node draining behavior of the Krustlet (see https://github.com/deislabs/krustlet/issues/523)
# There is already a PR for cargo to allow patching of dependencies (see https://github.com/rust-lang/cargo/pull/9001).
anyhow = "1.0"
async-trait = "0.1"
byteorder = "1.4"
dirs = "3.0"
env_logger = "0.9"
flate2 = "1.0"
futures-util = "0.3"
handlebars = "4.1"
hostname = "0.3"
k8s-openapi = { version = "0.11", default-features = false, features = ["api", "v1_18"] }
krator = { git = "https://github.com/stackabletech/krustlet.git", branch = "stackable_patches_v0.7.0" } # version = "0.2"
kube = { version= "0.48", default-features = false, features = ["derive", "native-tls"] }
kubelet = { git = "https://github.com/stackabletech/krustlet.git", branch = "stackable_patches_v0.7.0", default-features = true, features= ["derive", "cli"] } # version = "0.7"
Inflector = "0.11"
lazy_static = "1.4"
log = "0.4"
multimap = "0.8"
nix = "0.22"
oci-distribution = { git = "https://github.com/stackabletech/krustlet.git", branch = "stackable_patches_v0.7.0" } # version = "0.6"
regex = "1.4"
reqwest = "0.11"
schemars = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
shellexpand = "2.1"
stackable_config = { git = "https://github.com/stackabletech/common.git", branch = "main" }
strum = { version = "0.21", features = ["derive"] }
strum_macros = "0.21"
systemd = { version = "0.9", default-features = false, features = ["journal"] }
tar = "0.4"
thiserror = "1.0"
tokio = { version = "1.9", features = ["macros", "rt-multi-thread", "time"] }
url = "2.2"
zbus = "2.0.0-beta.5"
zvariant = "2.7.0"

[dev-dependencies]
indoc = "1.0"
rstest = "0.11"
serde_yaml = "0.8"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[package.metadata.deb]
maintainer-scripts = "packaging/debian/"
systemd-units = { enable = false }
assets = [
    ["packaging/config/agent.conf", "etc/stackable/stackable-agent/", "644"],
    ["target/release/stackable-agent", "opt/stackable-agent/stackable-agent", "755"],
]
