[package]
authors = ["Sönke Liebau <soenke.liebau@stackable.de>"]
build = "build.rs"
description = "The component of the Stackable Platform that manages installation of services on the workers"
edition = "2018"
license = "Apache-2.0"
name = "stackable-agent"
repository = "https://github.com/stackabletech/agent"
version = "0.7.0-nightly"

[dependencies]
# We are currently referencing the Krustlet directly from a Stackable fork of the official repository.
# The fork is needed to remove the node draining behavior of the Krustlet (see https://github.com/deislabs/krustlet/issues/523)
# There is already a PR for cargo to allow patching of dependencies (see https://github.com/rust-lang/cargo/pull/9001).
anyhow = "1.0"
async-trait = "0.1"
byteorder = "1.4"
dirs = "4.0"
env_logger = "0.9"
flate2 = "1.0"
futures-util = "0.3"
handlebars = "4.1"
hostname = "0.3"
k8s-openapi = { version = "0.11", default-features = false, features = ["api", "v1_20"] }
krator = { git = "https://github.com/stackabletech/krustlet.git", tag = "0.7.0-stackable.5" } # version = "0.2"
kube = { version= "0.48", default-features = false, features = ["derive", "native-tls"] }
kubelet = { git = "https://github.com/stackabletech/krustlet.git", tag = "0.7.0-stackable.5", default-features = true, features= ["derive", "cli"] } # version = "0.7"
Inflector = "0.11"
json-patch = "0.2"
lazy_static = "1.4"
log = "0.4"
multimap = "0.8"
nix = "0.22"
# Pin notify to the latest version compatible with krustlet 0.7.0.
# TODO Remove when upgrading krustlet
notify = "= 5.0.0-pre.10"
oci-distribution = { git = "https://github.com/stackabletech/krustlet.git", tag = "0.7.0-stackable.5" } # version = "0.6"
regex = "1.4"
reqwest = "0.11"
schemars = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
shellexpand = "2.1"
stackable-config = { git = "https://github.com/stackabletech/common.git", tag = "0.1.0" }
strum = { version = "0.21", features = ["derive"] }
strum_macros = "0.21"
systemd = { version = "0.9", default-features = false, features = ["journal"] }
tar = "0.4"
thiserror = "1.0"
tokio = { version = "1.11", features = ["macros", "rt-multi-thread", "time"] }
url = "2.2"
zbus = { git = "https://gitlab.freedesktop.org/dbus/zbus", rev = "ff08cbbbcd3eead16464012b92e3862d4dcb6f16" } # version 2.0.0-beta.6 + merge request !354 (fixes a race condition) + commit 6cdfe48cda5e0bf7b0dd8675be7a84439678afa9 (fixes another race condition)
zvariant = { git = "https://gitlab.freedesktop.org/dbus/zbus", rev = "ff08cbbbcd3eead16464012b92e3862d4dcb6f16" } # version 2.8.0 which is compatible with the zbus version

[dev-dependencies]
indoc = "1.0"
rstest = "0.11"
serde_yaml = "0.8"

[build-dependencies]
built = { version =  "0.5", features = ["chrono", "git2"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[package.metadata.deb]
maintainer-scripts = "packaging/debian/"
systemd-units = { enable = false }
assets = [
    ["packaging/config/agent.conf", "etc/stackable/stackable-agent/", "644"],
    ["target/release/stackable-agent", "opt/stackable/stackable-agent/stackable-agent", "755"],
]
